Update default JVM args